	  function called stm32_clockenable() that can be used by PM logic to re-start
	  the PLL after re-awakening from deep sleep modes.
	* fs/fs_foreachinode.c and fs/fs_foreachmountpoint.c:  All logic to traverse
	  inodes and mountpoints in the NuttX pseudo-file system.
	* fs/fat/fs_fat32.c: Max. filename length reported by statfs() was wrong
	  if FAT long file names were enabled.
	* lib/stdio/lib_libvsprintf.c:  Fieldwidth and justification were not
	  supported for the %s format.  As a result, %s, %12s, and %-12s all
	  produced the same output.
	* lib/stdio/lib_libdtoa.c:  Fix several issues with presenting floating
	  point numbers (conversions are fine, but presentation was bad).  This
	  is a critical bug fix if you use printf or sprintf to deal with floating
	  point numbers.
	* lib/stdio/lib_libdtoa.c and lib_libvsprintf.c:  Correct some floating
	  point options.
	* arch/arm/lpc43xx/lpc32_usb0dev.c:  Add framework for development of
	  an USB0, device-side driver for the LPC43XX.  The initial check-in,
	  however, is simply for the LPC31xx driver with name changes.  The
	  LPC31xx has the same USB IP, but will require some additional initialization
	  (and lots of testing) before it can be used with the LPC43xx.
	* nuttx/Documentation/NuttShell.html:  Added a section covering ways to
	  customize the behavior or NSH.
	* arch/arm/src/stm32/chip/stm32f1*_pinmap.h: STM32 CAN TX/RX pins reversed;
	  inconsistent conditional compilation.  Reported by Max Holtzberg.
	* arch/arm/*/stm32:  Add support for STM32 F107 "Connectivity Line" 
	  Ethernet (contributed by Max Holtzberg).
	* configs/olimex-stm32-p107:  Add board support for the Olimiex STM32-P107
	   board (contributed by Max Holtzberg).
	* arch/arm/src/stm32/stm32f2xx_dma.c, stm32f4xx_dma.c, stm32_serial.c, and
	  stm32_spic.c:  DMA priority was getting zeroed by STM32 F2/F4 DMA drivers
	  so that all DMAs ran at the lowest priority.